# laser_line_striping

./: CMakeLists.txt  package.xml
scripts/: green_lasers.py  hsv_thresholder.py  line.py  red_lasers.py
scripts/Red Lasers (Plane)/: model_2.py
src/: line_batch.py  line_striping.cpp  line_striping.py
src/Line Striping Stereo v0.1/: line.py
